# catware-texture-format

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  spec.md  testImage.ctf.bak  testImage.tga  testImage2.ctf
CTFCreate/Source/: Main.c
CTFTest/Source/: Main.c
libCTF/Source/: CTF.c  CTF.h
